# examples/local-file/src/lib/api/petstore/services/orders.types.ts
@@ -1,0 +1,47 @@
+// AUTO-GENERATED BY specshot
+import { z } from "zod";
+
+// -- Specific Models for orders --
+export const OrderSchema = z.object({
+  id: z.number().optional(),
+  petId: z.number().optional(),
+  quantity: z.number().optional(),
+  shipDate: z.string().optional(),
+  status: z.enum(["placed", "approved", "delivered"]).optional(),
+  complete: z.boolean().optional(),
+});
+export type Order = z.infer<typeof OrderSchema>;
+
+// -- Request & Response Types --
+
+export type OrdersListOrdersParams = {
+  status?: string;
+  startDate?: string;
+  endDate?: string;
+};
+
+export const OrdersListOrdersResponseSchema = z.array(OrderSchema);
+export type OrdersListOrdersResponse = z.infer<
+  typeof OrdersListOrdersResponseSchema
+>;
+
+export type OrdersPlaceOrderPayload = Order;
+
+export const OrdersPlaceOrderResponseSchema = OrderSchema;
+export type OrdersPlaceOrderResponse = z.infer<
+  typeof OrdersPlaceOrderResponseSchema
+>;
+
+export const OrdersGetOrderResponseSchema = OrderSchema;
+export type OrdersGetOrderResponse = z.infer<
+  typeof OrdersGetOrderResponseSchema
+>;
+
+export const OrdersCancelOrderResponseSchema = z.any();
+export type OrdersCancelOrderResponse = z.infer<
+  typeof OrdersCancelOrderResponseSchema
+>;
+
+// --- CUSTOM CODE START ---
+// Add your custom types here. Do not remove these comments.
+// --- CUSTOM CODE END ---
