# examples/local-file/src/lib/api/petstore/services/users.types.ts
@@ -1,0 +1,48 @@
+// AUTO-GENERATED BY specshot
+import { z } from "zod";
+
+// -- Specific Models for users --
+export const UserSchema = z.object({
+  id: z.number().optional(),
+  username: z.string().optional(),
+  firstName: z.string().optional(),
+  lastName: z.string().optional(),
+  email: z.string().optional(),
+  password: z.string().optional(),
+  phone: z.string().optional(),
+  userStatus: z.number().optional(),
+});
+export type User = z.infer<typeof UserSchema>;
+
+// -- Request & Response Types --
+
+export const UsersListUsersResponseSchema = z.array(UserSchema);
+export type UsersListUsersResponse = z.infer<
+  typeof UsersListUsersResponseSchema
+>;
+
+export type UsersCreateUserPayload = User;
+
+export const UsersCreateUserResponseSchema = UserSchema;
+export type UsersCreateUserResponse = z.infer<
+  typeof UsersCreateUserResponseSchema
+>;
+
+export type UsersLoginUserParams = {
+  username: string;
+  password: string;
+};
+
+export const UsersLoginUserResponseSchema = z.string();
+export type UsersLoginUserResponse = z.infer<
+  typeof UsersLoginUserResponseSchema
+>;
+
+export const UsersLogoutUserResponseSchema = z.any();
+export type UsersLogoutUserResponse = z.infer<
+  typeof UsersLogoutUserResponseSchema
+>;
+
+// --- CUSTOM CODE START ---
+// Add your custom types here. Do not remove these comments.
+// --- CUSTOM CODE END ---
